--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     <!-- Masthead-->
     <header class="masthead">
         <div class="container">
-            <div class="masthead-heading text-uppercase">Innenausbau Ziberi</div>
+            <!-- <div class="masthead-heading text-uppercase">Innenausbau Ziberi</div> -->
             <!-- <a class="btn btn-primary btn-xl text-uppercase" href="#services">Unsere Galerie</a> -->
         </div>
     </header>
@@ -144,21 +144,21 @@
                 <div class="row align-items-stretch mb-5">
                     <div class="col-md-6">
                         <div class="form-group">
-                            <input class="form-control" id="name" type="text" placeholder="Vorname Nachname *" required="required" />
+                            <input class="form-control" name="Name" id="name" type="text" placeholder="Vorname Nachname *" required="required" />
                             <p class="help-block text-danger"></p>
                         </div>
                         <div class="form-group">
-                            <input class="form-control" id="email" type="email" placeholder="E-Mail Adresse *" required="required" />
+                            <input class="form-control" name="E-Mail" id="email" type="email" placeholder="E-Mail Adresse *" required="required" />
                             <p class="help-block text-danger"></p>
                         </div>
                         <div class="form-group mb-md-0">
-                            <input class="form-control" id="phone" type="tel" placeholder="Telefonnummer *" required="required" />
+                            <input class="form-control" name="Telefonnummer" id="phone" type="tel" placeholder="Telefonnummer *" required="required" />
                             <p class="help-block text-danger"></p>
                         </div>
                     </div>
                     <div class="col-md-6">
                         <div class="form-group form-group-textarea mb-md-0">
-                            <textarea class="form-control" id="message" placeholder="Ihre Nachricht *" required="required"></textarea>
+                            <textarea class="form-control" name="Nachricht" id="message" placeholder="Ihre Nachricht *" required="required"></textarea>
                             <p class="help-block text-danger"></p>
                         </div>
                     </div>
@@ -175,7 +175,7 @@
         <div class="container">
             <div class="row align-items-center">
                 <div class="col-lg-4 text-lg-start">
-                    Agan Ramadani &copy;
+                    Hyper-Development &copy;
                     <script>
                         document.write(new Date().getFullYear());
                     </script>
