--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
     <meta name="description" content="" />
     <meta name="author" content="" />
-    <title>Ziberi Innenausbau Firma</title>
+    <title>Innenausbau Ziberi</title>
     <!-- Favicon-->
     <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
     <!-- Font Awesome icons (free version)-->
@@ -137,8 +137,8 @@
     <section class="page-section" id="contact">
         <div class="container">
             <div class="text-center">
-                <h2 class="section-heading text-uppercase">Kontaktiere uns heute noch!</h2>
-                <h3 class="section-subheading text-muted">Wir kümmern uns m&ouml;glichst schnell um Ihr Anliegen</h3>
+                <h2 class="section-heading text-uppercase">Kontakt</h2>
+                <h3 class="section-subheading text-muted">Machen Sie sich heute noch einen Beratungstermin!</h3>
             </div>
             <form id="contactForm" action="/assets/mail/contact_me.php" method="post">
                 <div class="row align-items-stretch mb-5">
